Fix : Modal Mobile UI's overflow problem

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -41,8 +41,6 @@
     .modal__wrapper {
         width: 90%;
         height: 70%;
-
-        overflow: hidden;
     }
 }
 
@@ -50,8 +48,6 @@
     .modal__wrapper {
         width: 90%;
         height: 55%;
-
-        overflow: hidden;
     }
 }
 
